# server/internal/model/types.go
@@ -19,11 +19,44 @@ type TodayMedication struct {
 	PlannedDoseTablets float64 `json:"plannedDoseTablets"`
 }
 
+type LatestINRDisplayText struct {
+	Label       string `json:"label"`
+	TargetLabel string `json:"targetLabel"`
+	RawLabel    string `json:"rawLabel"`
+}
+
+type NextTestDisplayText struct {
+	Label     string `json:"label"`
+	CycleText string `json:"cycleText"`
+}
+
+type TodayMedicationDisplayText struct {
+	Title             string `json:"title"`
+	PrimaryAction     string `json:"primaryAction"`
+	PauseAction       string `json:"pauseAction"`
+	MissAction        string `json:"missAction"`
+	YesterdayDoseText string `json:"yesterdayDoseText"`
+	StatusText        string `json:"statusText"`
+	TomorrowDoseTitle string `json:"tomorrowDoseTitle"`
+	PlannedDoseLabel  string `json:"plannedDoseLabel"`
+	ManualDoseLabel   string `json:"manualDoseLabel"`
+	RecordedAtHint    string `json:"recordedAtHint"`
+	ConfirmAction     string `json:"confirmAction"`
+}
+
+type HomeSummaryDisplayText struct {
+	Locale          string                     `json:"locale"`
+	LatestINR       LatestINRDisplayText       `json:"latestInr"`
+	NextTest        NextTestDisplayText        `json:"nextTest"`
+	TodayMedication TodayMedicationDisplayText `json:"todayMedication"`
+}
+
 type HomeSummary struct {
-	ProminentReminder Reminder        `json:"prominentReminder"`
-	LatestINR         *INRRecord      `json:"latestInr"`
-	NextTestAt        time.Time       `json:"nextTestAt"`
-	TodayMedication   TodayMedication `json:"todayMedication"`
+	ProminentReminder Reminder               `json:"prominentReminder"`
+	LatestINR         *INRRecord             `json:"latestInr"`
+	NextTestAt        time.Time              `json:"nextTestAt"`
+	TodayMedication   TodayMedication        `json:"todayMedication"`
+	DisplayText       HomeSummaryDisplayText `json:"displayText"`
 }
 
 type MedicationRecord struct {
@@ -42,15 +75,23 @@ type CreateMedicationRecordRequest struct {
 	TomorrowDoseTablets *float64 `json:"tomorrowDoseTablets"`
 }
 
+type INRRecordDisplayText struct {
+	StatusLabel string `json:"statusLabel"`
+	Note        string `json:"note"`
+	RawLabel    string `json:"rawLabel"`
+	MethodLabel string `json:"methodLabel"`
+}
+
 type INRRecord struct {
-	ID             string    `json:"id"`
-	RawValue       float64   `json:"rawValue"`
-	OffsetValue    float64   `json:"offsetValue"`
-	CorrectedValue float64   `json:"correctedValue"`
-	Trend          string    `json:"trend"`
-	AbnormalTier   string    `json:"abnormalTier"`
-	TestMethod     string    `json:"testMethod"`
-	TestedAt       time.Time `json:"testedAt"`
+	ID             string               `json:"id"`
+	RawValue       float64              `json:"rawValue"`
+	OffsetValue    float64              `json:"offsetValue"`
+	CorrectedValue float64              `json:"correctedValue"`
+	Trend          string               `json:"trend"`
+	AbnormalTier   string               `json:"abnormalTier"`
+	TestMethod     string               `json:"testMethod"`
+	TestedAt       time.Time            `json:"testedAt"`
+	DisplayText    INRRecordDisplayText `json:"displayText"`
 }
 
 type INRTrendPoint struct {
@@ -59,10 +100,36 @@ type INRTrendPoint struct {
 	CorrectedValue float64 `json:"correctedValue"`
 }
 
+type INRTrendDisplayText struct {
+	Title                string `json:"title"`
+	Subtitle             string `json:"subtitle"`
+	CorrectedSeriesLabel string `json:"correctedSeriesLabel"`
+	RawSeriesLabel       string `json:"rawSeriesLabel"`
+	StrongLabel          string `json:"strongLabel"`
+	WeakLabel            string `json:"weakLabel"`
+}
+
+type INRRecordLabelsDisplayText struct {
+	Normal     string `json:"normal"`
+	WeakLow    string `json:"weakLow"`
+	StrongLow  string `json:"strongLow"`
+	WeakHigh   string `json:"weakHigh"`
+	StrongHigh string `json:"strongHigh"`
+}
+
+type INRRecordsDisplayText struct {
+	Locale       string                     `json:"locale"`
+	Trend        INRTrendDisplayText        `json:"trend"`
+	RecordLabels INRRecordLabelsDisplayText `json:"recordLabels"`
+	RecordsTitle string                     `json:"recordsTitle"`
+	RecordsHint  string                     `json:"recordsHint"`
+}
+
 type INRRecordsResponse struct {
-	Records     []INRRecord     `json:"records"`
-	Trend       []INRTrendPoint `json:"trend"`
-	TargetRange TargetRange     `json:"targetRange"`
+	Records     []INRRecord           `json:"records"`
+	Trend       []INRTrendPoint       `json:"trend"`
+	TargetRange TargetRange           `json:"targetRange"`
+	DisplayText INRRecordsDisplayText `json:"displayText"`
 }
 
 type TargetRange struct {
@@ -82,11 +149,26 @@ type TestCycle struct {
 	Interval int    `json:"interval" binding:"required,min=1"`
 }
 
+type SettingsDisplayText struct {
+	Locale              string `json:"locale"`
+	INRRangeTitle       string `json:"inrRangeTitle"`
+	INRRangeHint        string `json:"inrRangeHint"`
+	TestMethodTitle     string `json:"testMethodTitle"`
+	TestMethodHint      string `json:"testMethodHint"`
+	OffsetTitle         string `json:"offsetTitle"`
+	OffsetHint          string `json:"offsetHint"`
+	CycleTitle          string `json:"cycleTitle"`
+	CycleHint           string `json:"cycleHint"`
+	MedicationTimeTitle string `json:"medicationTimeTitle"`
+	SaveAction          string `json:"saveAction"`
+}
+
 type UserSettings struct {
-	TargetINRMin          float64   `json:"targetInrMin"`
-	TargetINRMax          float64   `json:"targetInrMax"`
-	DefaultMedicationTime string    `json:"defaultMedicationTime"`
-	TestCycle             TestCycle `json:"testCycle" binding:"required"`
-	TestMethods           []string  `json:"testMethods" binding:"required,min=1,dive,oneof=hospital_lab poct_device home_device other"`
-	INROffset             float64   `json:"inrOffset"`
+	TargetINRMin          float64             `json:"targetInrMin"`
+	TargetINRMax          float64             `json:"targetInrMax"`
+	DefaultMedicationTime string              `json:"defaultMedicationTime"`
+	TestCycle             TestCycle           `json:"testCycle" binding:"required"`
+	TestMethods           []string            `json:"testMethods" binding:"required,min=1,dive,oneof=hospital_lab poct_device home_device other"`
+	INROffset             float64             `json:"inrOffset"`
+	DisplayText           SettingsDisplayText `json:"displayText"`
 }
